HelloUltraviolet/Fixtures/RejectedSource/Expressions/ClosureMoveCaptureMoved/Expected.uv
//! Expected diagnostic metadata for the ClosureMoveCaptureMoved rejected-source specimen.

expectedDiagnostic("E-CON-0121", "rule.16.B-Closure-MoveCapture-Moved-Err")
